<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/biggest_margin"
        android:layout_marginEnd="@dimen/biggest_margin"
        android:layout_marginTop="@dimen/biggest_margin">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginStart="@dimen/endMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/guide" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/biggest_margin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/biggest_margin"
                app:srcCompat="@drawable/ic_tick" />

            <TextView
                style="@style/msgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/message_is_okay" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/biggest_margin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/biggest_margin"
                app:srcCompat="@drawable/ic_question" />

            <TextView
                style="@style/msgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/be_cautious_of_it" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/biggest_margin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/biggest_margin"
                app:srcCompat="@drawable/ic_danger" />

            <TextView
                style="@style/msgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/dangerous_message" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/biggest_margin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/biggest_margin"
                app:srcCompat="@drawable/ic_company" />

            <TextView
                style="@style/msgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/this_means_it_s_from_a_company" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/biggest_margin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/biggest_margin"
                app:srcCompat="@drawable/ic_contact" />

            <TextView
                style="@style/msgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/received_from_a_contact" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/biggest_margin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/biggest_margin"
                app:srcCompat="@drawable/ic_link" />

            <TextView
                style="@style/msgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/message_contains_a_web_link" />
        </TableRow>
    </TableLayout>
</LinearLayout>