<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="6dp"
    android:layout_marginStart="@dimen/endMargin"
    android:layout_marginEnd="@dimen/endMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/endMargin"
        android:layout_marginEnd="@dimen/endMargin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tickIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_tick"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/questionIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_question"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/virusIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_danger"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/linkIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_link"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/contactIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_contact"
            android:layout_marginEnd="@dimen/biggest_margin"/>

        <ImageView
            android:id="@+id/companyIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_company"
            android:layout_marginEnd="@dimen/biggest_margin"/>

        <TextView
            android:id="@+id/messageTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:layout_marginTop="@dimen/middleMargin"
            android:layout_marginEnd="@dimen/big_margin"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/messageSender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/middleMargin"
            android:text="@string/sender"
            android:textAlignment="center"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/endMargin"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/message_details"
                style="@style/msgText"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/linksTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/endMargin"
                android:autoLink="web"
                android:textColorLink="@color/rmt_red"
                android:layout_marginBottom="@dimen/big_margin"
                android:linksClickable="false"
                style="@style/defaultText"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/analysisTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/endMargin"
                android:text="@string/message_analysis"
                android:visibility="gone"
                style="@style/defaultText"
                android:layout_marginBottom="@dimen/endMargin"/>
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>


