<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="fill_vertical"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="7dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                android:layout_marginStart="@dimen/endMargin">

                <TextView
                    android:id="@+id/messageCountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/endMargin"
                    android:text="@string/messages_processed" />

                <TextView
                    android:id="@+id/messageCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                android:layout_marginStart="@dimen/endMargin">

                <TextView
                    android:id="@+id/urlCountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/endMargin"
                    android:text="@string/urls_detected" />

                <TextView
                    android:id="@+id/urlCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                android:layout_marginStart="@dimen/endMargin">

                <TextView
                    android:id="@+id/maliciousCountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/endMargin"
                    android:text="@string/malicious_messages" />

                <TextView
                    android:id="@+id/maliciousCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/endMargin"
            android:layout_marginTop="@dimen/endMargin"
            android:layout_marginLeft="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>